Week 10 V1 - Login System
Added UI for login screen(main acticity)
added login checking with firebase(firestore)

added checking for user type/level

added exit on home page feature
- If you click "logout" in customer page, you'll be taken to login screen.
- If you click "back button" of phone, you will exit app completely (actually is call finish() in the login screen/main activity)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_white">#F9F9F9</color>
+    <color name="primary_black">#333333</color>
+    <color name="primary_gray">#DADADA</color>
+    <color name="primary_base">#F4511E</color>
+    <color name="primary_text">#707070</color>
 </resources>
