--- a/app/src/main/res/layout/activity_book_room_details.xml
+++ b/app/src/main/res/layout/activity_book_room_details.xml
@@ -7,13 +7,11 @@
     tools:context=".bookRoomDetails">
 
     <LinearLayout
+        android:id="@+id/bookConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
         android:orientation="vertical"
+        android:padding="15dp"
         tools:layout_editor_absoluteX="218dp"
         tools:layout_editor_absoluteY="448dp">
 
@@ -57,8 +55,6 @@
                 android:textSize="22sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <!--            android:layout_weight="8"-->
         </LinearLayout>
 
         <LinearLayout
@@ -94,8 +90,6 @@
                 android:textSize="22sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <!--            android:layout_weight="8"-->
         </LinearLayout>
 
         <LinearLayout
@@ -128,8 +122,6 @@
                 android:textColor="@color/primary_black"
                 android:textSize="22sp" />
 
-
-            <!--            android:layout_weight="8"-->
         </LinearLayout>
 
         <LinearLayout
@@ -162,8 +154,6 @@
                 android:textColor="@color/primary_black"
                 android:textSize="22sp" />
 
-
-            <!--            android:layout_weight="8"-->
         </LinearLayout>
 
         <LinearLayout
@@ -214,10 +204,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/roomType"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <!--            android:layout_weight="8"-->
         </LinearLayout>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBarBooking"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight=".1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
