--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="primary_base">#F4511E</color>
     <color name="primary_base_variant">#E3704C</color>
     <color name="primary_text">#707070</color>
+    <color name="full_transparent">#00FFFFFF</color>
+    <color name="semi_transparent">#70505050</color>
 </resources>
