--- a/app/src/main/res/layout/activity_book_room_details.xml
+++ b/app/src/main/res/layout/activity_book_room_details.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:id="@+id/bookConstraint"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,7 +12,6 @@
         tools:context=".bookRoomDetails">
 
         <LinearLayout
-            android:id="@+id/bookConstraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
