Re-asssessed signup process order
- Added UI Locking when registering valid account
- Cleaned up signup logic

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".signUp">
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/signupConstraint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -84,5 +90,18 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordSignup"
         app:strokeColor="@color/primary_black"
         app:strokeWidth="1dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
