--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".signUp">
-
+    tools:context=".ForgotPassword">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/signupConstraint"
+        android:id="@+id/resetConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
@@ -24,70 +23,27 @@
             android:id="@+id/emailInput"
             android:layout_width="300dp"
             android:layout_height="34dp"
-
             android:layout_marginTop="150dp"
             android:background="@drawable/edit_text"
             android:ems="10"
             android:inputType="textPersonName"
             android:padding="5dip"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textViewName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Username"
-            app:layout_constraintBottom_toTopOf="@+id/nameSignup"
-            app:layout_constraintStart_toStartOf="@+id/nameSignup" />
-
-        <EditText
-            android:id="@+id/nameSignup"
-            android:layout_width="300dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/edit_text"
-            android:ems="10"
-            android:inputType="text"
-            android:padding="5dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailInput" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password"
-            app:layout_constraintBottom_toTopOf="@+id/passwordSignup"
-            app:layout_constraintStart_toStartOf="@+id/passwordSignup" />
-
-        <EditText
-            android:id="@+id/passwordSignup"
-            android:layout_width="300dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/edit_text"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:maxLength="12"
-            android:padding="5dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameSignup" />
-
         <Button
-            android:id="@+id/createuserButton"
+            android:id="@+id/resetBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="50dp"
             android:backgroundTint="@color/primary_white"
-            android:text="Signup"
+            android:text="Reset Password"
             android:textColor="@color/primary_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordSignup"
+            app:layout_constraintTop_toBottomOf="@+id/emailInput"
             app:strokeColor="@color/primary_black"
             app:strokeWidth="1dp" />
 
@@ -102,6 +58,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
