--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         <EditText
             android:id="@+id/passwordInput"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="34dp"
             android:layout_marginTop="50dp"
             android:background="@drawable/edit_text"
             android:ems="10"
@@ -55,11 +55,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailInput" />
 
+        <TextView
+            android:id="@+id/forgotPasswordText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forgot password?"
+            app:layout_constraintEnd_toEndOf="@+id/passwordInput"
+            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
+
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="50dp"
             android:backgroundTint="@color/primary_white"
             android:text="Login"
             android:textColor="@color/primary_text"
