--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,104 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bookConstraint"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".EditProfile">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/editConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:context=".EditProfile">
 
-        <TextView
-            android:id="@+id/textView6"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/editConstraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Username"
+                app:layout_constraintBottom_toTopOf="@+id/username"
+                app:layout_constraintStart_toStartOf="@+id/username" />
+
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="300dp"
+                android:layout_height="34dp"
+                android:layout_marginTop="100dp"
+                android:background="@drawable/edit_text"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:padding="5dip"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewName2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Old Password"
+                app:layout_constraintBottom_toTopOf="@+id/oldPasswordInput"
+                app:layout_constraintStart_toStartOf="@+id/oldPasswordInput" />
+
+            <EditText
+                android:id="@+id/oldPasswordInput"
+                android:layout_width="300dp"
+                android:layout_height="34dp"
+                android:layout_marginTop="150dp"
+                android:background="@drawable/edit_text"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:padding="5dip"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/username" />
+
+            <TextView
+                android:id="@+id/textViewName3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Password"
+                app:layout_constraintBottom_toTopOf="@+id/passwordInput"
+                app:layout_constraintStart_toStartOf="@+id/passwordInput" />
+
+            <EditText
+                android:id="@+id/passwordInput"
+                android:layout_width="300dp"
+                android:layout_height="34dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/edit_text"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:padding="5dip"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/oldPasswordInput" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Repeat New Password"
+                app:layout_constraintBottom_toTopOf="@+id/passwordRepeatInput"
+                app:layout_constraintStart_toStartOf="@+id/passwordRepeatInput" />
+
+            <EditText
+                android:id="@+id/passwordRepeatInput"
+                android:layout_width="300dp"
+                android:layout_height="34dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/edit_text"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:maxLength="12"
+                android:padding="5dip"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
+
+            <Button
+                android:id="@+id/updateUsernameBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:backgroundTint="@color/primary_white"
+                android:text="Update Username"
+                android:textColor="@color/primary_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/username"
+                app:strokeColor="@color/primary_black"
+                app:strokeWidth="1dp" />
+
+            <Button
+                android:id="@+id/updatePasswordBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:backgroundTint="@color/primary_white"
+                android:text="Update Password"
+                android:textColor="@color/primary_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/passwordRepeatInput"
+                app:strokeColor="@color/primary_black"
+                app:strokeWidth="1dp" />
+
+            <Button
+                android:id="@+id/deleteBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
+                android:backgroundTint="@color/primary_white"
+                android:text="Delete Account"
+                android:textColor="@color/primary_text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/updatePasswordBtn"
+                app:strokeColor="@color/primary_black"
+                app:strokeWidth="1dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Username"
-            app:layout_constraintBottom_toTopOf="@+id/username"
-            app:layout_constraintStart_toStartOf="@+id/username" />
-
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="300dp"
-            android:layout_height="34dp"
-
-            android:layout_marginTop="150dp"
-            android:background="@drawable/edit_text"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:padding="5dip"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textViewName2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password"
-            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
-            app:layout_constraintStart_toStartOf="@+id/passwordInput" />
-
-        <EditText
-            android:id="@+id/passwordInput"
-            android:layout_width="300dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/edit_text"
-            android:ems="10"
-            android:inputType="text"
-            android:padding="5dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/username" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Repeat Password"
-            app:layout_constraintBottom_toTopOf="@+id/passwordRepeatInput"
-            app:layout_constraintStart_toStartOf="@+id/passwordRepeatInput" />
-
-        <EditText
-            android:id="@+id/passwordRepeatInput"
-            android:layout_width="300dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/edit_text"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:maxLength="12"
-            android:padding="5dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
-
-        <Button
-            android:id="@+id/changeBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:backgroundTint="@color/primary_white"
-            android:text="Update"
-            android:textColor="@color/primary_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordRepeatInput"
-            app:strokeColor="@color/primary_black"
-            app:strokeWidth="1dp" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="182dp"
-        tools:layout_editor_absoluteY="342dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
