--- a/app/src/main/res/layout/view_room_rows.xml
+++ b/app/src/main/res/layout/view_room_rows.xml
@@ -68,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginBottom="2dp"
         android:background="@drawable/thin_border"
         android:padding="10dp"
         android:text="Room Number"
@@ -81,9 +82,10 @@
         android:id="@+id/roomNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
         android:background="@drawable/thin_border"
         android:padding="10dp"
-        android:text="Room Type"
+        android:text="101"
         android:textAlignment="textEnd"
         android:textColor="@color/primary_white"
         android:textSize="22sp"
