--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -58,6 +58,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editAdminProfile"
+        app:strokeColor="@color/primary_black"
+        app:strokeWidth="1dp" />
+
+    <Button
+        android:id="@+id/editAdminProfile"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:backgroundTint="@color/primary_white"
+        android:text="edit profile"
+        android:textColor="@color/primary_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkoutBtn"
         app:strokeColor="@color/primary_black"
         app:strokeWidth="1dp" />
@@ -66,16 +80,18 @@
         android:id="@+id/logoutBtn"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/primary_white"
         android:text="Logout"
         android:textColor="@color/primary_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addadminBtn"
         app:strokeColor="@color/primary_black"
         app:strokeWidth="1dp" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
