--- a/app/src/main/res/layout/activity_checkin_details.xml
+++ b/app/src/main/res/layout/activity_checkin_details.xml
@@ -240,8 +240,8 @@
                     android:background="@color/primary_gray"
                     android:padding="10dp"
                     android:text="Check in"
-                    android:textAlignment="textEnd"
-                    android:textColor="@color/primary_black"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
                     android:textSize="22sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
