--- a/app/src/main/res/layout/check_in_rows.xml
+++ b/app/src/main/res/layout/check_in_rows.xml
@@ -32,7 +32,8 @@
         android:text="Room Type"
         android:textColor="@color/primary_white"
         android:textSize="22sp"
-        app:layout_constraintEnd_toStartOf="@+id/checkinADBtn"
+        app:layout_constraintBottom_toTopOf="@+id/roomNumberAD"
+        app:layout_constraintEnd_toEndOf="@+id/roomNumberAD"
         app:layout_constraintStart_toEndOf="@+id/roomTypeView"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,22 +65,9 @@
 
 
     <TextView
-        android:id="@+id/clientNameAD"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/thin_border"
-        android:text="name"
-        android:textAlignment="textEnd"
-        android:textColor="@color/primary_white"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@id/clientEmailAD"
-        app:layout_constraintEnd_toStartOf="@id/checkinADBtn"
-        app:layout_constraintTop_toBottomOf="@id/roomNumberAD" />
-
-    <TextView
         android:id="@+id/clientEmailView"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginBottom="1dp"
         android:background="@drawable/thin_border"
@@ -88,11 +76,8 @@
         android:textColor="@color/primary_white"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/checkinADBtn"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/roomNumberView"
-        app:layout_constraintTop_toBottomOf="@+id/roomNumberView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/roomNumberView" />
 
     <TextView
         android:id="@+id/clientEmailAD"
@@ -105,23 +90,21 @@
         android:textColor="@color/primary_white"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkinADBtn"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/clientEmailView" />
+        app:layout_constraintEnd_toEndOf="@+id/roomNumberAD"
+        app:layout_constraintStart_toEndOf="@+id/clientEmailView"
+        app:layout_constraintTop_toBottomOf="@+id/roomNumberAD"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/checkinADBtn"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
         android:text="Check in"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/roomTypeAD"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
